# APC-labs

./: .gitignore  README.md
lab1/: CMakeLists.txt  hello.cpp  sudoku_LB.cpp  sudoku_letizia.cpp
lab1/libs/sudoku/: CMakeLists.txt
lab1/libs/sudoku/src/: sudokuRB.cpp
lab1/libs/sudoku/test/: CMakeLists.txt  testRB.cpp
lab1/src/: CMakeLists.txt  main.cpp  sudoku_initial.cpp
lab1/src/sudoku/: CMakeLists.txt
lab1/src/sudoku/include/: sudoku.h  sudokuRB.h
lab1/src/sudoku/src/: sudokuLB.cpp  sudokuLC.cpp  sudokuMJ.cpp  sudokuRB.cpp  testtest.cpp
lab1/tests/: CMakeLists.txt  testBasic.cpp  testCols.cpp  testRB.cpp  testRegs.cpp  testRows.cpp
lab2/: CMakeLists.txt
lab2/src/: CMakeLists.txt
lab2/src/social/: CMakeLists.txt
